# android-log-c

./: .gitignore  README.adoc
src/: CMakeLists.txt  main.c
